Test/errors/err_case_not_constant.cb
extern int main()
{
    int y = 5;
    int z = 1;
    expect_error("case value must be a constant integer or string literal");
    switch (y) {
        case z:
            return 1;
        default:
            break;
    }
    return 0;
}
